--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
@@ -15,7 +17,8 @@
     "allowJs": true,
     "noUnusedLocals": false,
     "strictNullChecks": false,
-    "outDir": "dist"
+    "isolatedModules": true,
+    "noEmit": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
